--- a/.service
+++ b/.service
@@ -8,6 +8,8 @@ Group=www-data
 WorkingDirectory=/home/hamdi/flask-app
 Environment="PATH=/home/hamdi/flask-app/env/bin"
 ExecStart=/home/hamdi/flask-app/env/bin/gunicorn --workers 3 --bind unix:flask-app.sock -m 007 wsgi:app
+StandardOutput=file:/var/log/flume-ng/log1.log
+StandardError=file:/var/log/flume-ng/log2.log
 
 [Install]
 WantedBy=multi-user.target
