--- a/.service
+++ b/.service
@@ -7,7 +7,7 @@ User=hamdi
 Group=www-data
 WorkingDirectory=/home/hamdi/flask-app
 Environment="PATH=/home/hamdi/flask-app/env/bin"
-ExecStart=/home/hamdi/flask-app/env/bin/gunicorn --workers 3 --bind unix:flask-app.sock -m 007 wsgi:app
+ExecStart=/home/hamdi/flask-app/env/bin/gunicorn --chdir /home/hamdi/flask-app --workers 3 --bind unix:flask-app.sock -m 007 wsgi:app
 StandardOutput=file:/var/log/flume-ng/log1.log
 StandardError=file:/var/log/flume-ng/log2.log
 
