--- a/.service
+++ b/.service
@@ -8,8 +8,8 @@ Group=www-data
 WorkingDirectory=/home/hamdi/flask-app
 Environment="PATH=/home/hamdi/flask-app/env/bin"
 ExecStart=/home/hamdi/flask-app/env/bin/gunicorn --chdir /home/hamdi/flask-app --workers 3 --bind unix:flask-app.sock -m 007 wsgi:app
-StandardOutput=file:/var/log/flume-ng/log1.log
-StandardError=file:/var/log/flume-ng/log2.log
+StandardOutput=file:/var/log/flask-app.log
+StandardError=file:/var/log/flask-app.log
 
 [Install]
 WantedBy=multi-user.target
