add vlog to project path

--- a/.service
+++ b/.service
@@ -9,7 +9,7 @@ WorkingDirectory=/home/hamdi/flask-app
 Environment="PATH=/home/hamdi/flask-app/env/bin"
 ExecStart=/home/hamdi/flask-app/env/bin/gunicorn --chdir /home/hamdi/flask-app --workers 3 --bind unix:flask-app.sock -m 007 wsgi:app
 StandardOutput=file:/var/log/flask-app.log
-StandardError=file:/var/log/flask-app.log
+StandardError=file:/var/log/flask-app-Error.log
 
 [Install]
 WantedBy=multi-user.target
